@@ -46,7 +46,9 @@
 int readn_t(int fd, void *buf, size_t count, time_t timeout);
 int print_p(int f, const char *ftm, ...);
 
+#ifdef HAVE_WORKING_FORK
 int  run_cmd(void *d, void *opt);
+#endif
 void free_sopt(struct vtun_sopt *opt);
 
 /* IO cancelation */
